samples/_failures_safe/1761595914_f759f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e5682d4.c: In function ‘main’:
./samples/SAFE/__tmp_2e5682d4.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("Error reading matrix data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2e5682d4.c:137:9: error: expected declaration or statement at end of input
